Rewriting the paper in the springer format.

--- a/PSHA.bib
+++ b/PSHA.bib
@@ -33,8 +33,6 @@
   Number                   = {4},
   Pages                    = {424--434},
   Volume                   = {54},
-
-  __markedentry            = {[naeem:6]},
   Owner                    = {naeem},
   Publisher                = {Istituto Nazionale di Geofisica e Vulcanologia-INGV},
   Timestamp                = {2015.10.22}
@@ -118,6 +116,15 @@
   Timestamp                = {2015.07.15}
 }
 
+@Book{Berberian1994,
+  Title                    = {Natural hazards and the first earthquake catalogue of Iran: historical hazards in Iran prior to 1900},
+  Author                   = {Berberian, Manuel},
+  Publisher                = {UNESCO},
+  Year                     = {1994},
+  Owner                    = {naeem},
+  Timestamp                = {2016.01.10}
+}
+
 @Article{Berberian1976,
   Title                    = {On the evidence of the youngest activity of the {N}orth {T}abriz {F}ault and the seismicity of {T}abriz city},
   Author                   = {Berberian, M and Arshadi, S},
@@ -178,6 +185,7 @@
   Number                   = {1},
   Pages                    = {99--138},
   Volume                   = {24},
+
   Owner                    = {naeem},
   Timestamp                = {2015.08.24}
 }
@@ -208,6 +216,19 @@
   Timestamp                = {2015.07.15}
 }
 
+@Article{Castellaro2006,
+  Title                    = {Regression problems for magnitudes},
+  Author                   = {Castellaro, Silvia and Mulargia, Francesco and Kagan, Yan Y},
+  Journal                  = {Geophysical Journal International},
+  Year                     = {2006},
+  Number                   = {3},
+  Pages                    = {913--930},
+  Volume                   = {165},
+  Owner                    = {naeem},
+  Publisher                = {Oxford University Press},
+  Timestamp                = {2016.01.10}
+}
+
 @Article{Chiou2008,
   Title                    = {An NGA model for the average horizontal component of peak ground motion and response spectra},
   Author                   = {Chiou, BrianS-J and Youngs, Robert R},
@@ -233,6 +254,28 @@
   Owner                    = {naeem},
   Publisher                = {Seismological Society of America},
   Timestamp                = {2015.07.15}
+}
+
+@Article{Deniz2010,
+  Title                    = {Magnitude conversion problem for the Turkish earthquake data},
+  Author                   = {Deniz, Aykut and Yucemen, M Semih},
+  Journal                  = {Natural hazards},
+  Year                     = {2010},
+  Number                   = {2},
+  Pages                    = {333--352},
+  Volume                   = {55},
+  Owner                    = {naeem},
+  Publisher                = {Springer},
+  Timestamp                = {2016.01.10}
+}
+
+@Book{Douglas2011,
+  Title                    = {Ground-motion prediction equations 1964-2010},
+  Author                   = {Douglas, John},
+  Publisher                = {Pacific Earthquake Engineering Research Center Berkeley, CA},
+  Year                     = {2011},
+  Owner                    = {naeem},
+  Timestamp                = {2016.01.10}
 }
 
 @Standard{FEMA2003,
@@ -353,6 +396,21 @@
   Timestamp                = {2015.07.18}
 }
 
+@Article{Gutenberg1944,
+  Title                    = {Frequency of earthquakes in California},
+  Author                   = {Gutenberg, Beno and Richter, Charles F},
+  Journal                  = {Bulletin of the Seismological Society of America},
+  Year                     = {1944},
+  Number                   = {4},
+  Pages                    = {185--188},
+  Volume                   = {34},
+
+  __markedentry            = {[naeem:]},
+  Owner                    = {naeem},
+  Publisher                = {Seismological Society of America},
+  Timestamp                = {2016.01.10}
+}
+
 @Article{Hamdache,
   Title                    = {Spectral Accelerations and Uniform Hazard Spectra in {N}orthern {A}lgeria, using spatially-smoothed seismicity.},
   Author                   = {Hamdache, Mohamed and Montilla, Jos{\'e} A Pel{\'a}ez and Casado, Carlos L{\'o}pez},
@@ -425,6 +483,19 @@
 
   Owner                    = {naeem},
   Timestamp                = {2015.08.08}
+}
+
+@Article{Kanamori1977,
+  Title                    = {The energy release in great earthquakes},
+  Author                   = {Kanamori, Hiroo},
+  Journal                  = {Journal of geophysical research},
+  Year                     = {1977},
+  Number                   = {20},
+  Pages                    = {2981--2987},
+  Volume                   = {82},
+  Owner                    = {naeem},
+  Publisher                = {American Geophysical Union},
+  Timestamp                = {2016.01.10}
 }
 
 @Article{Karimiparidari2013,
@@ -505,6 +576,19 @@
   Timestamp                = {2015.07.15}
 }
 
+@Article{Mirzaei1997,
+  Title                    = {A uniform catalog of earthquakes for seismic hazard assessment in Iran},
+  Author                   = {Mirzaei, Noorbakhsh and Gao, Meng-Tan and Chen, Yun-Tai and Wang, Jian},
+  Journal                  = {Acta Seismologica Sinica},
+  Year                     = {1997},
+  Number                   = {6},
+  Pages                    = {713--726},
+  Volume                   = {10},
+  Owner                    = {naeem},
+  Publisher                = {Springer},
+  Timestamp                = {2016.01.10}
+}
+
 @Article{Mirzaei1998,
   Title                    = {Seismic source regionalization for seismic zoning of {I}ran: major seismotectonic provinces},
   Author                   = {Mirzaei, N and Mengtan, Gao and Yuntai, Chen},
@@ -516,6 +600,15 @@
   Owner                    = {naeem},
   Publisher                = {EDITORIAL DEPARTMENT, JOURNAL OF EARTHQUAKE PREDICTION RESEARCH},
   Timestamp                = {2015.07.15}
+}
+
+@Article{Moinfar1994,
+  Title                    = {Historical and instrumental earthquake data collection of Iran},
+  Author                   = {Moinfar, A and Mahdavian, A and Maleki, E},
+  Journal                  = {Mahab Ghods Consultant Engineers, Iran (in Persian)},
+  Year                     = {1994},
+  Owner                    = {naeem},
+  Timestamp                = {2016.01.10}
 }
 
 @InProceedings{Moschetti2014,
@@ -586,6 +679,29 @@
   Timestamp                = {2015.07.18}
 }
 
+@Article{Reasenberg1985,
+  Title                    = {Second-order moment of central California seismicity, 1969--1982},
+  Author                   = {Reasenberg, Paul},
+  Journal                  = {Journal of Geophysical Research: Solid Earth (1978--2012)},
+  Year                     = {1985},
+  Number                   = {B7},
+  Pages                    = {5479--5495},
+  Volume                   = {90},
+  Owner                    = {naeem},
+  Publisher                = {Wiley Online Library},
+  Timestamp                = {2016.01.10}
+}
+
+@Article{Richter1958,
+  Title                    = {Elementary seismology..},
+  Author                   = {Richter, Charles Francis},
+  Year                     = {1958},
+
+  __markedentry            = {[naeem:6]},
+  Owner                    = {naeem},
+  Timestamp                = {2016.01.10}
+}
+
 @Article{Scherbaum2009,
   Title                    = {Model selection in seismic hazard analysis: An information-theoretic perspective},
   Author                   = {Scherbaum, Frank and Delavaud, Elise and Riggelsen, Carsten},
@@ -594,11 +710,22 @@
   Number                   = {6},
   Pages                    = {3234--3247},
   Volume                   = {99},
-
-  __markedentry            = {[naeem:]},
   Owner                    = {naeem},
   Publisher                = {Seismological Society of America},
   Timestamp                = {2015.08.24}
+}
+
+@Article{Shahvar2013,
+  Title                    = {A unified seismic catalog for the Iranian plateau (1900--2011)},
+  Author                   = {Shahvar, Mohammad P and Zare, Mehdi and Castellaro, Silvia},
+  Journal                  = {Seismological Research Letters},
+  Year                     = {2013},
+  Number                   = {2},
+  Pages                    = {233--249},
+  Volume                   = {84},
+  Owner                    = {naeem},
+  Publisher                = {Seismological Society of America},
+  Timestamp                = {2016.01.10}
 }
 
 @Article{Stocklin1968,
@@ -669,7 +796,7 @@
   Year                     = {2010},
 
   Month                    = {1},
-  Note                     = {http://earthquake.usgs.gov/earthquakes/eqarchives/significant/sig_1997.php, Accessed April 4, 2010},
+  Note                     = {http://earthquake.usgs.gov/earthquakes/eqarchives/significant/sig1997.php, Accessed April 4, 2010},
 
   Organization             = {United States Geological Survey},
   Owner                    = {naeem},
@@ -786,5 +913,18 @@
 
   Owner                    = {naeem},
   Timestamp                = {2015.07.18}
+}
+
+@Article{Zare2014,
+  Title                    = {Recent developments of the Middle East catalog},
+  Author                   = {Zare, Mehdi and Amini, Hamideh and Yazdi, Pouye and Sesetyan, Karin and Demircioglu, Mine Betul and Kalafat, Dogan and Erdik, Mustafa and Giardini, Domenico and Khan, M Asif and Tsereteli, Nino},
+  Journal                  = {Journal of Seismology},
+  Year                     = {2014},
+  Number                   = {4},
+  Pages                    = {749--772},
+  Volume                   = {18},
+  Owner                    = {naeem},
+  Publisher                = {Springer},
+  Timestamp                = {2016.01.10}
 }
 
