--- a/content.tex
+++ b/content.tex
@@ -1,11 +1,8 @@
 \input{introduction}
-\input{magnitude_conversion}
-\input{declustering.tex}
-\input{completness_test.tex}
-\input{GR_param.tex}
-\input{MH_calculation.tex}
-\input{attenuation_relationship.tex}
-\input{Hazard_calculation.tex}
-\input{Discussion.tex}
-\input{Conclusion.tex}
-\input{Acknowledgements.tex}
+\input{region_of_interest}
+\input{Acknowledgements}
+
+
+
+
+
