Chapter 4 is completed.

--- a/PSHA.bib
+++ b/PSHA.bib
@@ -33,6 +33,7 @@
   Number                   = {4},
   Pages                    = {424--434},
   Volume                   = {54},
+
   Owner                    = {naeem},
   Publisher                = {Istituto Nazionale di Geofisica e Vulcanologia-INGV},
   Timestamp                = {2015.10.22}
@@ -121,6 +122,7 @@
   Author                   = {Berberian, Manuel},
   Publisher                = {UNESCO},
   Year                     = {1994},
+
   Owner                    = {naeem},
   Timestamp                = {2016.01.10}
 }
@@ -224,6 +226,7 @@
   Number                   = {3},
   Pages                    = {913--930},
   Volume                   = {165},
+
   Owner                    = {naeem},
   Publisher                = {Oxford University Press},
   Timestamp                = {2016.01.10}
@@ -264,6 +267,7 @@
   Number                   = {2},
   Pages                    = {333--352},
   Volume                   = {55},
+
   Owner                    = {naeem},
   Publisher                = {Springer},
   Timestamp                = {2016.01.10}
@@ -274,6 +278,7 @@
   Author                   = {Douglas, John},
   Publisher                = {Pacific Earthquake Engineering Research Center Berkeley, CA},
   Year                     = {2011},
+
   Owner                    = {naeem},
   Timestamp                = {2016.01.10}
 }
@@ -405,7 +410,6 @@
   Pages                    = {185--188},
   Volume                   = {34},
 
-  __markedentry            = {[naeem:]},
   Owner                    = {naeem},
   Publisher                = {Seismological Society of America},
   Timestamp                = {2016.01.10}
@@ -493,6 +497,7 @@
   Number                   = {20},
   Pages                    = {2981--2987},
   Volume                   = {82},
+
   Owner                    = {naeem},
   Publisher                = {American Geophysical Union},
   Timestamp                = {2016.01.10}
@@ -584,6 +589,7 @@
   Number                   = {6},
   Pages                    = {713--726},
   Volume                   = {10},
+
   Owner                    = {naeem},
   Publisher                = {Springer},
   Timestamp                = {2016.01.10}
@@ -607,6 +613,7 @@
   Author                   = {Moinfar, A and Mahdavian, A and Maleki, E},
   Journal                  = {Mahab Ghods Consultant Engineers, Iran (in Persian)},
   Year                     = {1994},
+
   Owner                    = {naeem},
   Timestamp                = {2016.01.10}
 }
@@ -687,6 +694,7 @@
   Number                   = {B7},
   Pages                    = {5479--5495},
   Volume                   = {90},
+
   Owner                    = {naeem},
   Publisher                = {Wiley Online Library},
   Timestamp                = {2016.01.10}
@@ -697,7 +705,7 @@
   Author                   = {Richter, Charles Francis},
   Year                     = {1958},
 
-  __markedentry            = {[naeem:6]},
+  __markedentry            = {[naeem:]},
   Owner                    = {naeem},
   Timestamp                = {2016.01.10}
 }
@@ -710,6 +718,7 @@
   Number                   = {6},
   Pages                    = {3234--3247},
   Volume                   = {99},
+
   Owner                    = {naeem},
   Publisher                = {Seismological Society of America},
   Timestamp                = {2015.08.24}
@@ -723,9 +732,21 @@
   Number                   = {2},
   Pages                    = {233--249},
   Volume                   = {84},
+
   Owner                    = {naeem},
   Publisher                = {Seismological Society of America},
   Timestamp                = {2016.01.10}
+}
+
+@Book{Shearer2009,
+  Title                    = {Introduction to seismology},
+  Author                   = {Shearer, Peter M},
+  Publisher                = {Cambridge University Press},
+  Year                     = {2009},
+
+  __markedentry            = {[naeem:6]},
+  Owner                    = {naeem},
+  Timestamp                = {2016.01.15}
 }
 
 @Article{Stocklin1968,
@@ -923,6 +944,7 @@
   Number                   = {4},
   Pages                    = {749--772},
   Volume                   = {18},
+
   Owner                    = {naeem},
   Publisher                = {Springer},
   Timestamp                = {2016.01.10}
