--- a/springer_main.tex
+++ b/springer_main.tex
@@ -12,6 +12,7 @@
 \usepackage{graphicx}
 \usepackage[a4paper]{geometry}
 \usepackage{xcolor}
+\usepackage{amsmath}
 %\usepackage[margin=1in]{geometry}
 
 %
